packages/components/src/components/td-doc-tabs/style.less
:host {
  --block-base-width: 16px;
  position: absolute;
  top: 228px;
  z-index: 1100;

  @media screen and (max-width: 960px) {
    --block-base-width: 14px;
  }
}

.TDesign-doc-tabs {
  display: flex;
  align-items: center;
  justify-content: center;
  border-radius: 6px;
  background: var(--bg-color-tab);
  height: calc(var(--block-base-width) * 3);
  box-sizing: border-box;
  cursor: pointer;
  border: 1px solid var(--component-border);

  &__block {
    position: absolute;
    background-color: var(--bg-color-tab-select);
    box-shadow: 0px 2px 4px rgba(0, 0, 0, .15);
    position: absolute;
    height: calc(100% - 8px);
    left: 4px;
    transition: all var(--anim-time-fn-easing) var(--anim-duration-moderate);
    border-radius: var(--border-radius);
  }

  .item + .item {
    margin-left: 8px;
  }

  .item {
    margin: 4px;
    padding: 8px calc(var(--block-base-width) * 1.5);
    font-size: var(--block-base-width);
    box-sizing: border-box;
    transition: all var(--anim-time-fn-easing) var(--anim-duration-moderate);
    border-radius: var(--border-radius);
    color: var(--text-secondary);
    position: relative;
    word-break: keep-all;
    white-space: nowrap;
    
    &:hover,
    &.active {
      color: var(--text-primary);
    }
  }
}

